# Image-Fragmentizer

./: .gitignore  .gitmodules  CMakeLists.txt  install.sh  makefile  project_tree.txt
assets/: fragment_cutter_kerne_debug.cl  fragment_cutter_kernel.cl  fragment_cutter_kernel_debug.cl
include/: opengl_context.h  resources.h
include/controller/: fragmentizer_controller.h
include/model/: benchmarker.h  channels_mask.h  fragment_cutter.h  fragment_info.h  fragment_plotter.h  fragmentizer.h  image.h  opencl_fragment_cutter.h
include/view/: color_style.h  gui.h  texture.h
src/: main.cpp  opengl_context.cpp  resources.cpp
src/controller/: fragmentizer_controller.cpp
src/model/: benchmarker.cpp  fragment_cutter.cpp  fragment_info.cpp  fragment_plotter.cpp  fragmentizer.cpp  image.cpp  opencl_fragment_cutter.cpp
src/view/: gui.cpp  texture.cpp
